[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nammalang"
version = "0.1.0"
description = "A Kannada-inspired programming language."
authors = [
    { name="Shreeshanth", email="shreeshanthnaik@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"

[project.scripts]
nammalang = "nammalang.__main__:main"
